fix h1 z-index

--- a/app/assets/stylesheets/controllers/posts.css.scss
+++ b/app/assets/stylesheets/controllers/posts.css.scss
@@ -41,7 +41,7 @@ body[data-controller="posts"] {
       position: absolute;
       top: 0.1em;
       left: 0.5em;
-      z-index: 1;
+      z-index: 9;
 
       img {
         height: 1em;
